# Ngin2D

./: .gitignore  CMakeLists.txt  GameFramework.pro  build.bat  clean.bat  run.bat
src/: CMakeLists.txt  XYZ.vcxproj  XYZ.vcxproj.filters  cmake_install.cmake  issues.txt  main.cpp  main_test_1.cpp
src/Core/BObject/: BObject.cpp  BObject.h
src/Defines/: Alias.h  AliasDef.h  Defines.h  EnumDef.h  GameDef.h  GlobalDef.h  PhysicsDef.h  SpritesDef.h  StructsDef.h
src/ECS/: ComponentManager.cpp  ComponentManager.h  ECS.cpp  ECS.h  EntityManager.cpp  EntityManager.h  Manager.h  SystemManager.cpp  SystemManager.h
src/ECS/Components/: CameraComponent.h  ColliderComponent.h  ComponentBase.h  ComponentManager.cpp  ComponentManager.h  Components.h  HealthComponent.h  IComponent.h  MotionComponent.h  MouseAreaComponent.h  PlayerComponent.h  PositionComponent.h  SpawnComponent.h  SpriteComponent.h  TransformComponent.h
src/ECS/Components/ColliderComponent/: ColliderComponent.cpp  ColliderComponent.h
src/ECS/Components/HealthComponent/: HealthComponent.cpp  HealthComponent.h
src/ECS/Components/MotionComponent/: MotionComponent.cpp  MotionComponent.h
src/ECS/Components/SpriteComponent/: SpriteComponent.cpp  SpriteComponent.h
src/ECS/Components/TileComponent/: TileComponent.h
src/ECS/Entity/: Entities.h  Entity.h  EntityManager.cpp  EntityManager.h  IEntity.h
src/ECS/Systems/: ISystem.h  SystemManager.cpp  SystemManager.h  Systems.h
src/ECS/Systems/AnimationSystem/: AnimationSystem.cpp  AnimationSystem.h
src/ECS/Systems/CameraSystem/: CameraSystem.cpp  CameraSystem.h
src/ECS/Systems/CollisionSystem/: CollisionManager.cpp  CollisionManager.h  CollisionSystem.cpp  CollisionSystem.h
src/ECS/Systems/EventInputSystem/: EventInputSystem.cpp  EventInputSystem.h
src/ECS/Systems/MovementSystem/: MovementSystem.cpp  MovementSystem.h
src/ECS/Systems/RenderSystem/: RenderSystem.cpp  RenderSystem.h
src/ECS/Systems/SpawnSystem/: SpawnSystem.cpp  SpawnSystem.h
src/Engine/: Engine.cpp  Engine.h
src/Event/EventManager/: EventInputSystem.cpp  EventInputSystem.h
src/Event/KeyEvent/: KeyEvent.cpp  KeyEvent.h
src/Event/MouseEvent/: MouseEvent.cpp  MouseEvent.h
src/Game/: Game.cpp  Game.h
src/GameMaps/: GameMaps.cpp  GameMaps.h  LayerManager.cpp  LayerManager.h  MapParser.cpp  MapParser.h
src/Graphics/: Graphics.h
src/Graphics/AnimationManager/: AnimationManager.cpp  AnimationManager.h  AnimationManger.cpp  AnimationManger.h
src/Graphics/Camera/: Camera.cpp  Camera.h
src/Graphics/TextureManager/: TextureManager.cpp  TextureManager.h
src/Listener/: Events.h
src/Listener/KeyEvent/: KeyEvent.cpp  KeyEvent.h
src/Math/: Projection.h  Vector2D.h  math2D.h  matrix2D.h  point2D.h  projection2D.cpp  projection2D.h
src/Math/Shape/: IShape.h  Shapes.h
src/Math/Shape/Ellipse/: Ellipse.cpp  Ellipse.h
src/Math/Shape/Polygon/: Polygon.cpp  Polygon.h
src/Math/Shape/Rectangle/: Rectangle.cpp  Rectangle.h
src/Objects/: AActor.h  IObject.h
src/Scene/: Scene.cpp  Scene.h
src/Scene/Camera/: Camera.cpp  Camera.h
src/Timer/: Timer.h
src/Utils/: Logger.h  Utils.h
src/Utils/Hash/: Hash.cpp  Hash.h
src/Utils/Logger/: Logger.cpp  Logger.h
src/World/: World.cpp  World.h
src/XYZ.dir/Debug/XYZ.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  (+2 more)
src/engine/: CMakeLists.txt  CNgin.cpp  CNgin.h  engine.pri
src/engine/Adapters/: Adapters.pri  Box2DAdapter.h
src/engine/Base/: ABase.cpp  ABase.h  Alias.h  Base.pri
src/engine/Common/: Common.pri  CommonDefine.h  CommonEnums.h
src/engine/Control/: AEvent.h  CEventDispatcher.cpp  CEventDispatcher.h  CKeyEvent.cpp  CKeyEvent.h  CMouseEvent.cpp  CMouseEvent.h  Control.pri
src/engine/ECS/: ECS.pri
src/engine/Graphics/: ATextureManager.h  CTexture2DManager.cpp  CTexture2DManager.h  CTexture3DManager.cpp  CTexture3DManager.h  Graphics.pri  ITextureManager.h
src/engine/Math/: Math.pri  math2D.h  matrix2D.h  offset2D.h  point2D.h  projection2D.cpp  projection2D.h  rect.h  size2D.h  vector2D.h  vector2d.h
src/engine/Scene/: AScene.cpp  AScene.h  CBroadPhaseCulling.cpp  CBroadPhaseCulling.h  CGridLayout.cpp  CGridLayout.h  CSceneManager.cpp  CSceneManager.h  Scene.pri
src/engine/System/: System.pri
src/engine/Tilemap/: CLayer.cpp  CLayer.h  CLayerManager.cpp  CLayerManager.h  CLayerRenderer.cpp  CLayerRenderer.h  CObjLayerManager.cpp  CObjLayerManager.h  CObjectLayerManager.cpp  CObjectLayerManager.h  CTilemap.cpp  CTilemap.h  CTilesetManager.cpp  CTilesetManager.h  Tilemap.pri
src/engine/World/: CWorld.cpp  CWorld.h  World.pri
src/global/: CMakeLists.txt  CommonDefine.h  CommonEnums.h
src/scripts/: CMakeLists.txt  enums.h  scripts.pri
src/scripts/Common/: enums.h
src/scripts/Levels/: COriginLevel.cpp  COriginLevel.h
src/scripts/SceneObjects/: CGameScene.cpp  CGameScene.h  CSettingScene.cpp  CSettingScene.h
src/utils/: CMakeLists.txt  Utils.h  utils.pri
src/utils/Logger/: CLogger.cpp  CLogger.h  LoggerDefines.h
src/utils/MetaObject/: CMetaObject.h  CMetaObjectImpl.h
src/utils/Process/: CSafeQueue.h
src/utils/Template/: CCallbackFunc.h
(+142 files in other folders)
